styles/main.css
/* General */

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  background-image: url('../img/background.jpg');
  background-size: cover;
  font-family: 'Roboto', sans-serif;
}

/* Header (menu, logo, ricerca) */

#menu {
  height: 30px;
  background-color: #222;
  padding-top: 5px;
  border-bottom: 1px solid #111;
}

.menu-item {
  padding: 0 6px;
  font-size: 14px;
  text-decoration: none;
  color: #cccccc;
}

.menu-item-highlight {
  color: white;
  font-weight: 700;
}


#header-box {
  width:100%;
  margin-top: 5px;
}

.box-laterale {
  width: 175px;
  display: inline-block;
  padding-top: 5px;
  padding-left: 30px;
}

.box {
  width: auto;
  display: inline-block;
}

.logo-img {
  height: 50px;
  vertical-align: middle;
}

.logo-titolo {
  font-size: 24px;
  line-height: 24px;
  color: white;
}

#inbox-search {
  width: 250px;
  padding-right: 4px;
  text-align: right;
}

#inbox-search-button {
  margin-left: -5px;
}

/* Main (container, filtri, email rows) */

#bg-container {
  padding-top: 8px;
  padding-bottom: 6px;
  padding-left: 6px;
  margin-left: 177px;
  border-radius: 5px;
  background-color: rgba(0,0,0,0.5);
}

#advertising {
  padding-bottom: 6px;
  padding-left: 6px;
  font-size: 13px;
}

#adv-text {
  text-decoration: none;
  color: rgba(255, 255, 255, 0.7);
}

#adv-highlight {
  text-decoration: underline;
  color: rgba(255, 255, 255, 0.9);
}

#adv-annuncio::before {
  text-decoration: none;
  content: ' - ';
}

#inbox-container {
  background-color: rgba(0,0,0,1);
  color: white;
  padding-left: 6px;
}

.filters {
  display: inline-block;
  height: 32px;
  margin-top: 6px;
}

.filters input {
  height: 26px;
}

.filters-subgroup {
  display: inline-block;
  margin-right: 4px;
  margin-left: 4px;
}

.filters-subgroup input {
  margin-right: -2px;
  margin-left: -2px;
}

.simple-filter{
  padding-top: 4px;
}
.email-row {
  height: 28px;
  padding: 4px;
  border-top: 1px solid rgb(128, 128, 128);
  cursor: pointer;
}

.unread {
  background-color: rgba(255,255,255,0.9);
}

.read {
  background-color: rgba(255,255,255,0.7);
}

.selezione-email,
.mittente-email,
.titolo-email,
.testo-email {
  display: inline-block;
  color: rgba(0,0,0,0.9);
}

.testo-email{
  color: rgba(0,0,0,0.6);
}

.mittente-email {
  width: 200px;
}

.unread .mittente-email,
.unread .titolo-email {
    font-weight: bold;
    color: rgba(0,0,0,1);
}

.titolo-email::before {
  content: '';
}

.titolo-email::after {
  content: ' - ';
}

.star {
  display: inline-block;
  width: 16px;
  height: 16px;
  background-image: url('../img/star.png');
  background-size: contain;
}


/* Footer */

footer {
  padding: 20px 0;
  text-align: center;
  color: white;
}

